# freerouter

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  update-models.yml
scripts/: update_models.py
src/freerouter/: __init__.py  __main__.py  client.py  config.py  models.py  proxy.py  router.py
tests/: test_client.py  test_models.py  test_router.py
