[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freerouter"
version = "0.1.0"
description = "OpenAI 호환 프록시 — OpenRouter의 무료 모델 엔드포인트만 모아 자동 라우팅/폴백"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "unohee", email = "unohee.official@gmail.com" }]
keywords = ["openrouter", "llm", "proxy", "router", "openai", "free-models"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
freerouter = "freerouter.__main__:main"

[project.urls]
Homepage = "https://github.com/unohee/freerouter"

[tool.hatch.build.targets.wheel]
packages = ["src/freerouter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
